--- a/manuales.html
+++ b/manuales.html
@@ -176,13 +176,13 @@
               <img src="img/glpi.png">
             </div>
             <div class="content">
-              <div class="header">Manual de configuración de tickets</div>
+              <div class="header">Manual de iventariado de activos</div>
               <br>
               <div class="meta">
-                <p class="avanzado"><small>Básico</small></p>
+                <p class="medio"><small>Intermedio</small></p>
               </div>
               <div class="description">
-                Entiende como funcionan los usuarios en GLPI.
+                Aprende a configurar el agente GLPI para inventariar PC's en el servidor GLPI. 
               </div>
             </div>
             <div class="extra content">
@@ -193,9 +193,11 @@
               <span class="right floated">
                 <div class="ui animated button" tabindex="0">
                     <div class="visible content">Download</div>
+                    <a href="https://drive.google.com/uc?export=download&id=17XEIbEA-WyBiMbENr29TwiWyjSCsHJal" download> 
                     <div class="hidden content">
                       <i class="right arrow icon"></i>
                     </div>
+                    </a>
                   </div>
               </span>
             </div>
