--- a/descarga.html
+++ b/descarga.html
@@ -72,7 +72,7 @@
                 <p><b>Descarga con instalación por web </b> <br> <small>Descarga e instala GLPI en tu servidor ubuntu, con 
                   esta descarga podras instalar GLPI realizando el proceso de instalación vía web.</small></p>
                 <a href="https://drive.google.com/uc?export=download&id=1fs7HbIUCqZiFJW79Qf7avOZDan3Zo7YT" style="margin-left: 10%;" download>   
-                <button class="ui icon button" style="margin-left: 10%;">
+                <button class="ui icon button">
                   <i class="download icon" style="font-size: 1.5rem; display: flex; justify-content: center; align-items: center;"></i>
                 </button>
                 </a>
