--- a/manuales.html
+++ b/manuales.html
@@ -78,7 +78,7 @@
               <img src="img/glpi.png">
             </div>
             <div class="content">
-              <div class="header">Manual de elementos GLPI</div>
+              <div class="header">Manual de apartados generales GLPI</div>
               <br>
               <div class="meta">
                 <p class="basico"><small>Básico</small></p>
@@ -112,7 +112,7 @@
               <div class="header">Manual de configuración de tickets</div>
               <br>
               <div class="meta">
-                <p class="avanzado"><small>Básico</small></p>
+                <p class="basico"><small>Básico</small></p>
               </div>
               <div class="description">
                 Aprende a configurar tickets y lo que pasa una vez creados.
@@ -148,7 +148,7 @@
               <div class="header">Manual de reglas de GLPI</div>
               <br><br>
               <div class="meta">
-                <p class="medio"><small>Medio</small></p>
+                <p class="medio"><small>Intermedio</small></p>
               </div>
               <div class="description">
                 Aprende que tipos de reglas existen en GLPI y para que se usan
@@ -207,13 +207,13 @@
               <img src="img/glpi.png">
             </div>
             <div class="content">
-              <div class="header">Manual de configuración de tickets</div>
+              <div class="header">Manual de configuración de servidores de correo</div>
               <br>
               <div class="meta">
-                <p class="basico"><small>Básico</small></p>
+                <p class="avanzado"><small>Avanzado</small></p>
               </div>
               <div class="description">
-                Como crear y configurar tickets de incidencias.
+                Aprende a configurar las opciones de correo de GLPI
               </div>
             </div>
             <div class="extra content">
@@ -224,9 +224,11 @@
               <span class="right floated">
                 <div class="ui animated button" tabindex="0">
                     <div class="visible content">Download</div>
+                    <a href="https://drive.google.com/uc?export=download&id=1fze5_7iABp-1sdLQwdU6BOpte5DTCnXq" download> 
                     <div class="hidden content">
                       <i class="right arrow icon"></i>
                     </div>
+                    </a>
                   </div>
               </span>
             </div>
