--- a/descargar-reglas.html
+++ b/descargar-reglas.html
@@ -49,37 +49,27 @@
         <div class="ui raised segments" id="dwn-reglas">
           <div class="ui segment">
             <img src="img/glpi.png" alt="" width="5%" height="5%" style="margin-right: 2%;">
-            <p><b>Reglas de asignación automatica de tickets </b> <br> Descarga e instala automaticamente GLPI en tu servidor ubuntu, con esta descarga podras instalar GLPI con tan solo unos comandos.</p>
+            <p><b>Reglas de asignación de peticiones. </b> 
+            <br><br>
+            En este apartado puedes descargar e importar en tu servidor varias de las reglas que hemos creado en nuestro servidor, entre 
+            ellas puedes encontrar reglas de asignación automatica de tickets según la categoria y prioridad del ticket, reglas de 
+            asignación de prioridad y categoria del ticket según las palabras que se encuentren en la descripción del ticket, reglas de
+            asignación de plantillas de solución para un ticket dependiendo de la urgencia del ticket, reglas que envían una petición de 
+            validación en caso que el ticket sea de tipo Petición, etc.
+            <br><br>  
+            <small>
+              <b>NOTA*</b>
+              <br>
+              Para que las reglas funcionen debes tener en tu servidor GLPI las mismas categorias y usuarios que se especifican en las 
+              reglas o ajustar las reglas para usar las categorias y usuarios presentes en tu servidor GLPI.
+            </small>
+            </p>
             <button class="ui icon button" id="boton-descargar-regla">
+              <a href="https://drive.google.com/uc?export=download&id=1Nfd5WYyj2ZWtoVLTWfBCZ0YFfq2tNvAv" download target="_blank" style="text-decoration: none; color: white;">
               Descargar <i class="right chevron icon"></i>
+              </a>
             </button>
-          </div>
-        </div>
-        <div class="ui raised segments" id="dwn-reglas">
-          <div class="ui segment">
-            <img src="img/glpi.png" alt="" width="5%" height="5%" style="margin-right: 2%;">
-            <p><b>Reglas de asignación automatica de tickets</b> <br> Descarga e instala automaticamente GLPI en tu servidor ubuntu, con esta descarga podras instalar GLPI con tan solo unos comandos.</p>
-            <button class="ui icon button" id="boton-descargar-regla">
-              Descargar <i class="right chevron icon"></i>
-            </button>
-          </div>
-        </div>
-        <div class="ui raised segments" id="dwn-reglas">
-          <div class="ui segment">
-            <img src="img/glpi.png" alt="" width="5%" height="5%" style="margin-right: 2%;">
-            <p><b>Reglas de asignación automatica de tickets </b> <br> Descarga e instala automaticamente GLPI en tu servidor ubuntu, con esta descarga podras instalar GLPI con tan solo unos comandos.</p>
-            <button class="ui icon button" id="boton-descargar-regla">
-              Descargar <i class="right chevron icon"></i>
-            </button>
-          </div>
-        </div>
-        <div class="ui raised segments" id="dwn-reglas">
-          <div class="ui segment">
-            <img src="img/glpi.png" alt="" width="5%" height="5%" style="margin-right: 2%;">
-            <p><b>Reglas de asignación automatica de tickets </b> <br> Descarga e instala automaticamente GLPI en tu servidor ubuntu, con esta descarga podras instalar GLPI con tan solo unos comandos.</p>
-            <button class="ui icon button" id="boton-descargar-regla">
-              Descargar <i class="right chevron icon"></i>
-            </button>
+          
           </div>
         </div>
         <br><br>
