--- a/inicio.html
+++ b/inicio.html
@@ -239,7 +239,7 @@
         </div>
 
         <br><br>
-        <h1>Ellos confían GLPI</h1>
+        <h1>Ellos confían en GLPI</h1>
         <br>
         <h4>Algunas organizaciones conocidas que hoy en dia confian en GLPI para administrar y gestionar su
           infraestructura y activos TI.
